--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "bootstrap": "^3.2.0",
     "angular-resource": "^1.4.0",
     "angular-route": "^1.4.0",
-    "angular-bootstrap": "^1.2.1"
+    "angular-bootstrap": "^1.2.1",
+    "ng-tags-input": "^3.0.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
