--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,7 @@
     "angular-resource": "^1.4.0",
     "angular-route": "^1.4.0",
     "angular-bootstrap": "^1.2.1",
-    "ng-tags-input": "^3.0.0"
+    "ng-tags-input": "~3.0.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
