--- a/bower.json
+++ b/bower.json
@@ -6,8 +6,7 @@
     "bootstrap": "^3.2.0",
     "angular-resource": "^1.4.0",
     "angular-route": "^1.4.0",
-    "angular-bootstrap": "^1.2.1",
-    "ng-tags-input": "~3.0.0"
+    "angular-bootstrap": "^1.2.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
